--- a/Node_LPwan/platformio.ini
+++ b/Node_LPwan/platformio.ini
@@ -13,3 +13,4 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 upload_port = COM[3]
+lib_deps = adafruit/Adafruit BME680 Library@^2.0.2
